fix spacing for containers

--- a/src/App.css
+++ b/src/App.css
@@ -153,9 +153,10 @@
 
 .question-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(90, 17, 17, 0.85);
+  background-color: rgba(90, 17, 17, 0.85);
   width: 50vw;
   border-radius: 20px;
   margin: auto;
@@ -165,13 +166,18 @@
 
 .question-word {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   color: #fffdd0;
   font-weight: bold;
   font-size: 1.5em;
   font-family: "Noto Serif SC", serif;
+}
+
+.english-word,
+.pinyin-word {
+  margin: 0.2em 0;
 }
 
 .grid-container.difficult {
@@ -200,23 +206,22 @@
   padding: 1em 1em;
 }
 
-.btn {
-  display: block;
-  background-color: rgb(90, 17, 17, 0.6);
+.btns-container {
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 10px;
-  color: #fffdd0;
-  text-decoration: none;
-  margin-top: 2em;
-  width: 10em;
-  margin: auto;
-  border-radius: 20px;
+  gap: 2em; /* Adds the 2em space between buttons */
+  margin-top: 2em; /* Centers vertically */
 }
 
-/* .previous {
-  margin-right: 2em;
-} */
+.btn {
+  background-color: rgba(90, 17, 17, 0.85);
+  color: #fffdd0;
+  padding: 10px;
+  border-radius: 20px;
+  width: 10em;
+  text-align: center;
+}
 
 /*------------------Grid ---------------------------------------------------------------------*/
 
